# advisory-agent

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: ideas.md
src/: helper.py
src/advisor/: agent.py  tools.py
src/advisor/prompts/: system.md
tests/integration/: test_agent.py
tests/integration/advisor/: advisor.test.json
tests/unit/: test_helper.py
