[project]
name = "advisory-agent"
version = "0.1.0"
description = "Personal advisory agent powered by LLMs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-adk[eval]>=1.20.0",
    "selenium>=4.39.0",
    "webdriver-manager>=4.0.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
markers = [
    "integration: marks tests as integration tests (requires GOOGLE_API_KEY)"
]
